--- a/index.html
+++ b/index.html
@@ -181,9 +181,13 @@
                 </p>
               </div>
             </div>
-            <div class="form__radio">
-              <div class="form__radio-wrapper"><input type="radio" /><label>Female</label></div>
-              <div class="form__radio-wrapper"><input type="radio" /><label>Male</label></div>
+            <div class="form__rradio">
+              <div class="form__rradio-wrapper">
+                <input type="radio" />
+                <label>Female</label></div>
+              <div class="form__rradio-wrapper">
+                <input type="radio" />
+                <label>Male</label></div>
             </div>
             <div class="form__terms">
               <small
