--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TESDA | FACEBOOK LOGIN/SIGNUP | DAY 7</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -126,7 +126,7 @@
                 />
                 <input 
                   type="text" 
-                  placeholder="Surname" 
+                  placeholder="Last Name" 
                   class="form__text-input2"
                   autocomplete="false" 
                 />
@@ -158,7 +158,7 @@
               </div>
             </div>
             <div class="form__select">
-              <p class="form__bday">Birthday</p>
+              <label class="form__bday-label">Birthday</label>
               <div class="form__select-container">
                 <div class="form__select-list">
                   <select class="form__select-item"
@@ -171,21 +171,15 @@
                     ><option>Year</option></select
                   >
                 </div>
-                <p class="form__why">
-                  <a href=""
-                    ><small
-                      >Why do I need to provide<br />
-                      my date of birth?</small
-                    ></a
-                  >
-                </p>
+                  <a class="form__why" href="">Why do I need to provide
+                      my <br />date of birth?</a>
               </div>
             </div>
-            <div class="form__rradio">
-              <div class="form__rradio-wrapper">
+            <div class="form__radio">
+              <div class="form__radio-wrapper">
                 <input type="radio" />
                 <label>Female</label></div>
-              <div class="form__rradio-wrapper">
+              <div class="form__radio-wrapper">
                 <input type="radio" />
                 <label>Male</label></div>
             </div>
