updated options in select tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -161,14 +163,68 @@
               <label class="form__bday-label">Birthday</label>
               <div class="form__select-container">
                 <div class="form__select-list">
-                  <select class="form__select-item"
-                    ><option>Day</option></select
-                  >
-                  <select class="form__select-item"
-                    ><option>Month</option></select
-                  >
-                  <select class="form__select-item"
-                    ><option>Year</option></select
+                  <select class="form__select-item">
+                    <option>Day</option>
+                    <option value={1}>1</option>
+                    <option value={2}>2</option>
+                    <option value={3}>3</option>
+                    <option value={4}>4</option>
+                    <option value={5}>5</option>
+                    <option value={6}>6</option>
+                    <option value={7}>7</option>
+                    <option value={8}>8</option>
+                    <option value={9}>9</option>
+                    <option value={10}>10</option>
+                    <option value={11}>11</option>
+                    <option value={12}>12</option>
+                    <option value={13}>13</option>
+                    <option value={14}>14</option>
+                    <option value={15}>15</option>
+                    <option value={16}>16</option>
+                    <option value={17}>17</option>
+                    <option value={18}>18</option>
+                    <option value={19}>19</option>
+                    <option value={20}>20</option>
+                    <option value={21}>21</option>
+                    <option value={22}>22</option>
+                    <option value={23}>23</option>
+                    <option value={24}>24</option>
+                    <option value={25}>25</option>
+                    <option value={26}>26</option>
+                    <option value={27}>27</option>
+                    <option value={28}>28</option>
+                    <option value={29}>29</option>
+                    <option value={30}>30</option>
+                    <option value={31}>31</option>
+                  </select>
+                  <select class="form__select-item">
+                    <option>Month</option>
+                    <option value={'Jan'}>Jan</option>
+                    <option value={'Feb'}>Feb</option>
+                    <option value={'Mar'}>Mar</option>
+                    <option value={'Apr'}>Apr</option>
+                    <option value={'May'}>May</option>
+                    <option value={'Jun'}>Jun</option>
+                    <option value={'Jul'}>Jul</option>
+                    <option value={'Aug'}>Aug</option>
+                    <option value={'Sep'}>Sep</option>
+                    <option value={'Oct'}>Oct</option>
+                    <option value={'Nov'}>Nov</option>
+                    <option value={'Dec'}>Dec</option>
+                  </select>
+                  <select class="form__select-item">
+                    <option>Year</option>
+                    <option value={'2011'}>2011</option>
+                    <option value={'2012'}>2012</option>
+                    <option value={'2013'}>2013</option>
+                    <option value={'2014'}>2014</option>
+                    <option value={'2015'}>2015</option>
+                    <option value={'2016'}>2016</option>
+                    <option value={'2017'}>2017</option>
+                    <option value={'2018'}>2018</option>
+                    <option value={'2019'}>2019</option>
+                    <option value={'2020'}>2020</option>
+                    </select
                   >
                 </div>
                   <a class="form__why" href="">Why do I need to provide
@@ -189,7 +245,7 @@
                 <a href="">Terms</a> and that <br />you have read our
                 <a href="">Data Policy</a>, including our
                 <a href="">Cookie Use</a>. You may <br />receive SMS
-                Noticfications from Facebook and can opt out at any time.</small
+                Notifications from Facebook and can opt out at any time.</small
               >
             </div>
             <div class="form__btn-wrapper">
