--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>TESDA | FACEBOOK LOGIN/SIGNUP | DAY 7</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <div class="container">
@@ -261,6 +263,6 @@
         </div>
       </main>
     </div>
-    <script src="./js/script.js" async defer></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
