--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <button
                   id="btn-submit"
                   class="login__btn"
-                  onclick="login.handleAuth()"
+                  onclick="login.handleAuth(); return false;"
                 >
                   Log In
                 </button>
