--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>TESDA | FACEBOOK LOGIN/SIGNUP | DAY 7</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="img/favicon.png">
+    <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup" />
+    <meta name="author" content="Jerome Gacoscosim" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
