--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>TESDA | FACEBOOK LOGIN/SIGNUP | DAY 7</title>
     <link rel="icon" href="img/favicon.png">
-    <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup" />
+    <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup, JS, javascript" />
     <meta name="author" content="Jerome Gacoscosim" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
