--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>TESDA | FACEBOOK LOGIN/SIGNUP | DAY 7</title>
+    <title>TESDA | FB LOGIN/SIGNUP | DAY 7</title>
     <link rel="icon" href="img/favicon.png">
     <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup, JS, javascript" />
     <meta name="author" content="Jerome Gacoscosim" />
