updated input placeholder

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                   class="login__input"
                   onfocus="this.value=''"
                   autocomplete="off"
+                  placeholder="admin"
                 />
               </div>
               <div class="login__pword-container">
@@ -51,6 +52,7 @@
                   class="login__input"
                   onfocus="this.value=''"
                   autocomplete="off"
+                  placeholder="password"
                 />
                 <span><a href="">Forgot account?</a></span>
               </div>
