--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                   autocomplete="off"
                   placeholder="admin"
                 />
+                <span>
+                  &nbsp;
+                </span>
               </div>
               <div class="login__pword-container">
                 <label class="login__label">
@@ -57,6 +60,7 @@
                 <span><a href="">Forgot account?</a></span>
               </div>
               <div class="login__btn-wrapper">
+                <span>&nbsp;</span>
                 <button
                   id="btn-submit"
                   class="login__btn"
@@ -64,6 +68,7 @@
                 >
                   Log In
                 </button>
+                <span>&nbsp;</span>
               </div>
             </form>
           </div>
