--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <p class="signup__heading-sub">It's free and always will be.</p>
           <form class="form" action="#" autocomplete="off">
             <div class="form__input-container">
-              <div class="form__input-wrapper">
+              <div class="form__input">
                 <input
                   type="text"
                   placeholder="First Name"
@@ -143,7 +143,7 @@
                   autocomplete="false" 
                 />
               </div>
-              <div class="form__input-wrapper">
+              <div class="form__input">
                 <input
                   id="mobile"
                   type="text"
@@ -152,7 +152,7 @@
                   autocomplete="false"
                 />
               </div>
-              <div class="form__input-wrapper">
+              <div class="form__input">
                 <input
                   class="form__text-input"
                   type="text"
@@ -160,7 +160,7 @@
                   autocomplete="false"
                 />
               </div>
-              <div class="form__input-wrapper">
+              <div class="form__input">
                 <input
                   class="form__text-input"
                   type="password"
@@ -168,6 +168,7 @@
                   autocomplete="false"
                 />
               </div>
+              
             </div>
             <div class="form__select">
               <label class="form__bday-label">Birthday</label>
@@ -237,7 +238,7 @@
                     </select
                   >
                 </div>
-                  <a class="form__why" href="">Why do I need to provide
+                <a class="form__why" href="">Why do I need to provide
                       my <br />date of birth?</a>
               </div>
             </div>
