--- a/index.html
+++ b/index.html
@@ -1,277 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>TESDA | FB LOGIN/SIGNUP | DAY 7</title>
-    <link rel="icon" href="img/favicon.png">
-    <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup, JS, javascript" />
-    <meta name="author" content="Jerome Gacoscosim" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/main.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    
-  </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <div class="header__container">
-          <a href="index.html">
-            <img class="logo" src="./img/fb-logo.png" />
-          </a>
-          <div class="login">
-            <div>
-              <span class="login__status">&nbsp;</span>
-              <button
-                class="login__reload"
-                onclick="login.handleEnableInputs()"
-              ></button>
-            </div>
-            <form class="login__form" action="#">
-              <div class="login__uname-container">
-                <label class="login__label">
-                  Email or Phone
-                </label>
-                <input
-                  type="text"
-                  id="uname"
-                  class="login__input"
-                  onfocus="this.value=''"
-                  autocomplete="off"
-                  placeholder="admin"
-                />
-                <span>
-                  &nbsp;
-                </span>
-              </div>
-              <div class="login__pword-container">
-                <label class="login__label">
-                  Password
-                </label>
-                <input
-                  type="text"
-                  id="pword"
-                  class="login__input"
-                  onfocus="this.value=''"
-                  autocomplete="off"
-                  placeholder="password"
-                />
-                <span><a href="">Forgot account?</a></span>
-              </div>
-              <div class="login__btn-wrapper">
-                <span>&nbsp;</span>
-                <button
-                  id="btn-submit"
-                  class="login__btn"
-                  onclick="login.handleAuth(); return false;"
-                >
-                  Log In
-                </button>
-                <span>&nbsp;</span>
-              </div>
-            </form>
-          </div>
-        </div>
-      </header>
-      <main class="content">
-        <div class="hero">
-          <div class="hero__heading-wrapper">
-            <h1 class="hero__heading--main">
-              Connect with friends and the <br />
-              world around you with Facebook.
-            </h1>
-          </div>
-          <div class="hero__heading-container mt-2">
-            <div class="hero__features">
-              <ul class="hero__features-list">
-                <li class="hero__features-item">
-                  <img
-                    class="hero__features-icon"
-                    src="./img/fb-listing.png"
-                    alt="icon"
-                  />
-                  <h2 class="hero__heading-sub">
-                    See photos and updates
-                    <span>from friends and Newsfeed.</span>
-                  </h2>
-                </li>
-                <li class="hero__features-item">
-                  <img
-                    class="hero__features-icon"
-                    src="./img/fb-share.png"
-                    alt="icon"
-                  />
-                  <h2 class="hero__heading-sub">
-                    Share what's new
-                    <span>in your life on your timeline.</span>
-                  </h2>
-                </li>
-                <li class="hero__features-item">
-                  <img
-                    class="hero__features-icon"
-                    src="./img/fb-connect.png"
-                    alt="icon"
-                  />
-                  <h2 class="hero__heading-sub">
-                    Find more
-                    <span>
-                      of what you're looking for with Facebook Search.
-                    </span>
-                  </h2>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="signup">
-          <h1 class="signup__heading-main">Sign up</h1>
-          <p class="signup__heading-sub">It's free and always will be.</p>
-          <form class="form" action="#" autocomplete="off">
-            <div class="form__input-container">
-              <div class="form__input">
-                <input
-                  type="text"
-                  placeholder="First Name"
-                  class="form__text-input2"
-                  autocomplete="false"
-                />
-                <input 
-                  type="text" 
-                  placeholder="Last Name" 
-                  class="form__text-input2"
-                  autocomplete="false" 
-                />
-              </div>
-              <div class="form__input">
-                <input
-                  id="mobile"
-                  type="text"
-                  placeholder="Mobile number or email address"
-                  class="form__text-input"
-                  autocomplete="false"
-                />
-              </div>
-              <div class="form__input">
-                <input
-                  class="form__text-input"
-                  type="text"
-                  placeholder="Re-enter mobile number or email address"
-                  autocomplete="false"
-                />
-              </div>
-              <div class="form__input">
-                <input
-                  class="form__text-input"
-                  type="password"
-                  placeholder="New password"
-                  autocomplete="false"
-                />
-              </div>
-              
-            </div>
-            <div class="form__select">
-              <label class="form__bday-label">Birthday</label>
-              <div class="form__select-container">
-                <div class="form__select-list">
-                  <select class="form__select-item">
-                    <option>Day</option>
-                    <option value={1}>1</option>
-                    <option value={2}>2</option>
-                    <option value={3}>3</option>
-                    <option value={4}>4</option>
-                    <option value={5}>5</option>
-                    <option value={6}>6</option>
-                    <option value={7}>7</option>
-                    <option value={8}>8</option>
-                    <option value={9}>9</option>
-                    <option value={10}>10</option>
-                    <option value={11}>11</option>
-                    <option value={12}>12</option>
-                    <option value={13}>13</option>
-                    <option value={14}>14</option>
-                    <option value={15}>15</option>
-                    <option value={16}>16</option>
-                    <option value={17}>17</option>
-                    <option value={18}>18</option>
-                    <option value={19}>19</option>
-                    <option value={20}>20</option>
-                    <option value={21}>21</option>
-                    <option value={22}>22</option>
-                    <option value={23}>23</option>
-                    <option value={24}>24</option>
-                    <option value={25}>25</option>
-                    <option value={26}>26</option>
-                    <option value={27}>27</option>
-                    <option value={28}>28</option>
-                    <option value={29}>29</option>
-                    <option value={30}>30</option>
-                    <option value={31}>31</option>
-                  </select>
-                  <select class="form__select-item">
-                    <option>Month</option>
-                    <option value={'Jan'}>Jan</option>
-                    <option value={'Feb'}>Feb</option>
-                    <option value={'Mar'}>Mar</option>
-                    <option value={'Apr'}>Apr</option>
-                    <option value={'May'}>May</option>
-                    <option value={'Jun'}>Jun</option>
-                    <option value={'Jul'}>Jul</option>
-                    <option value={'Aug'}>Aug</option>
-                    <option value={'Sep'}>Sep</option>
-                    <option value={'Oct'}>Oct</option>
-                    <option value={'Nov'}>Nov</option>
-                    <option value={'Dec'}>Dec</option>
-                  </select>
-                  <select class="form__select-item">
-                    <option>Year</option>
-                    <option value={'2011'}>2011</option>
-                    <option value={'2012'}>2012</option>
-                    <option value={'2013'}>2013</option>
-                    <option value={'2014'}>2014</option>
-                    <option value={'2015'}>2015</option>
-                    <option value={'2016'}>2016</option>
-                    <option value={'2017'}>2017</option>
-                    <option value={'2018'}>2018</option>
-                    <option value={'2019'}>2019</option>
-                    <option value={'2020'}>2020</option>
-                    </select
-                  >
-                </div>
-                <a class="form__why" href="">Why do I need to provide
-                      my <br />date of birth?</a>
-              </div>
-            </div>
-            <div class="form__radio">
-              <div class="form__radio-wrapper">
-                <input type="radio" />
-                <label>Female</label></div>
-              <div class="form__radio-wrapper">
-                <input type="radio" />
-                <label>Male</label></div>
-            </div>
-            <div class="form__terms">
-              <small
-                >By clicking Create an account, you agree to our
-                <a href="">Terms</a> and that <br />you have read our
-                <a href="">Data Policy</a>, including our
-                <a href="">Cookie Use</a>. You may <br />receive SMS
-                Notifications from Facebook and can opt out at any time.</small
-              >
-            </div>
-            <div class="form__btn-wrapper">
-              <input class="form__btn" id="submit" type="submit" value="Create an account" />
-            </div>
-          </form>
-          <hr />
-          <div class="signup__create-section">
-            <span class="signup__create-wrapper">
-              <a class="signup__create-link" href="">Create a Page<a> for a celebrity, band or business.
-            </span>
-          </div>
-        </div>
-      </main>
-    </div>
-    <script src="./js/script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html> <head> <meta charset="utf-8"/> <meta http-equiv="X-UA-Compatible" content="IE=edge"/> <title>TESDA | FB LOGIN/SIGNUP | DAY 7</title> <link rel="icon" href="img/favicon.png"> <meta name="keywords" content="html, css, tesda, TESDA, exercise, activity, webdev, web development, informatics, facebook, Facebook, login, signup, JS, javascript"/> <meta name="author" content="Jerome Gacoscosim"/> <meta name="viewport" content="width=device-width, initial-scale=1"/> <link rel="stylesheet" href="css/main.css" type="text/css"/> <link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> </head> <body> <div class="container"> <header class="header"> <div class="header__container"> <a href="index.html"> <img class="logo" src="./img/fb-logo.png"/> </a> <div class="login"> <div> <span class="login__status">&nbsp;</span> <button class="login__reload" onclick="login.handleEnableInputs()" ></button> </div><form class="login__form" action="#"> <div class="login__uname-container"> <label class="login__label"> Email or Phone </label> <input type="text" id="uname" class="login__input" onfocus="this.value=''" autocomplete="off" placeholder="admin"/> <span> &nbsp; </span> </div><div class="login__pword-container"> <label class="login__label"> Password </label> <input type="text" id="pword" class="login__input" onfocus="this.value=''" autocomplete="off" placeholder="password"/> <span><a href="">Forgot account?</a></span> </div><div class="login__btn-wrapper"> <span>&nbsp;</span> <button id="btn-submit" class="login__btn" onclick="login.handleAuth(); return false;" > Log In </button> <span>&nbsp;</span> </div></form> </div></div></header> <main class="content"> <div class="hero"> <div class="hero__heading-wrapper"> <h1 class="hero__heading--main"> Connect with friends and the <br/> world around you with Facebook. </h1> </div><div class="hero__heading-container mt-2"> <div class="hero__features"> <ul class="hero__features-list"> <li class="hero__features-item"> <img class="hero__features-icon" src="./img/fb-listing.png" alt="icon"/> <h2 class="hero__heading-sub"> See photos and updates <span>from friends and Newsfeed.</span> </h2> </li><li class="hero__features-item"> <img class="hero__features-icon" src="./img/fb-share.png" alt="icon"/> <h2 class="hero__heading-sub"> Share what's new <span>in your life on your timeline.</span> </h2> </li><li class="hero__features-item"> <img class="hero__features-icon" src="./img/fb-connect.png" alt="icon"/> <h2 class="hero__heading-sub"> Find more <span> of what you're looking for with Facebook Search. </span> </h2> </li></ul> </div></div></div><div class="signup"> <h1 class="signup__heading-main">Sign up</h1> <p class="signup__heading-sub">It's free and always will be.</p><form class="form" action="#" autocomplete="off"> <div class="form__input-container"> <div class="form__input"> <input type="text" placeholder="First Name" class="form__text-input2" autocomplete="false"/> <input type="text" placeholder="Last Name" class="form__text-input2" autocomplete="false"/> </div><div class="form__input"> <input id="mobile" type="text" placeholder="Mobile number or email address" class="form__text-input" autocomplete="false"/> </div><div class="form__input"> <input class="form__text-input" type="text" placeholder="Re-enter mobile number or email address" autocomplete="false"/> </div><div class="form__input"> <input class="form__text-input" type="password" placeholder="New password" autocomplete="false"/> </div></div><div class="form__select"> <label class="form__bday-label">Birthday</label> <div class="form__select-container"> <div class="form__select-list"> <select class="form__select-item"> <option>Day</option> <option value={1}>1</option> <option value={2}>2</option> <option value={3}>3</option> <option value={4}>4</option> <option value={5}>5</option> <option value={6}>6</option> <option value={7}>7</option> <option value={8}>8</option> <option value={9}>9</option> <option value={10}>10</option> <option value={11}>11</option> <option value={12}>12</option> <option value={13}>13</option> <option value={14}>14</option> <option value={15}>15</option> <option value={16}>16</option> <option value={17}>17</option> <option value={18}>18</option> <option value={19}>19</option> <option value={20}>20</option> <option value={21}>21</option> <option value={22}>22</option> <option value={23}>23</option> <option value={24}>24</option> <option value={25}>25</option> <option value={26}>26</option> <option value={27}>27</option> <option value={28}>28</option> <option value={29}>29</option> <option value={30}>30</option> <option value={31}>31</option> </select> <select class="form__select-item"> <option>Month</option> <option value={'Jan'}>Jan</option> <option value={'Feb'}>Feb</option> <option value={'Mar'}>Mar</option> <option value={'Apr'}>Apr</option> <option value={'May'}>May</option> <option value={'Jun'}>Jun</option> <option value={'Jul'}>Jul</option> <option value={'Aug'}>Aug</option> <option value={'Sep'}>Sep</option> <option value={'Oct'}>Oct</option> <option value={'Nov'}>Nov</option> <option value={'Dec'}>Dec</option> </select> <select class="form__select-item"> <option>Year</option> <option value={'2011'}>2011</option> <option value={'2012'}>2012</option> <option value={'2013'}>2013</option> <option value={'2014'}>2014</option> <option value={'2015'}>2015</option> <option value={'2016'}>2016</option> <option value={'2017'}>2017</option> <option value={'2018'}>2018</option> <option value={'2019'}>2019</option> <option value={'2020'}>2020</option> </select > </div><a class="form__why" href="">Why do I need to provide my <br/>date of birth?</a> </div></div><div class="form__radio"> <div class="form__radio-wrapper"> <input type="radio"/> <label>Female</label></div><div class="form__radio-wrapper"> <input type="radio"/> <label>Male</label></div></div><div class="form__terms"> <small >By clicking Create an account, you agree to our <a href="">Terms</a> and that <br/>you have read our <a href="">Data Policy</a>, including our <a href="">Cookie Use</a>. You may <br/>receive SMS Notifications from Facebook and can opt out at any time.</small > </div><div class="form__btn-wrapper"> <input class="form__btn" id="submit" type="submit" value="Create an account"/> </div></form> <hr/> <div class="signup__create-section"> <span class="signup__create-wrapper"> <a class="signup__create-link" href="">Create a Page<a> for a celebrity, band or business. </span> </div></div></main> </div><script src="./js/script.js"></script> </body></html>
